# xiUtilities

./: .gitignore  .readthedocs.yaml  pyproject.toml  setup.py
docs/: api.rst  conf.py  index.rst
tests/: test_fdr.py  test_name_guessing.py  test_pandas_utils.py
xiutilities/: __init__.py  input_guessing.py  pandas_utils.py  polars_utils.py  rescore_plots.py
xiutils/: __init__.py  bi_fdr.py  rescore_plots.py
