[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xiutils"
description = "A collection of corss-link mass spectrometry tools."
keywords = [
    "proteomics",
    "rescoring",
    "crosslink",
    "mass spectrometry",
]
requires-python = ">=3.10"
authors = [
    { name="Falk B. Schimweg", email="git@falk.schimweg.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]
license = {file = "LICENSE"}
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/Rappsilber-Laboratory/xiUtils"
Issues = "https://github.com/Rappsilber-Laboratory/xiUtils/issues"
Documentation = "https://xiutils.readthedocs.io/"

[tool.setuptools_scm]
version_file = "xiutils/_version.py"
